[package]
name = "example-cli-workflow"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: drive your crate from the generic `modal-rust` CLI — no driver binary, no runner bin. You write a plain `#[function]` lib; the CLI does the rest: `doctor` (offline preflight), `run`, `deploy`, `call`. Offline-tested via `modal-rust doctor --project examples/cli-workflow`; the run/deploy/call commands require Modal (documented, compile/listed only)."
publish = false

[lib]
name = "example_cli_workflow"
path = "src/lib.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# Test-only: the unit test that asserts the input decodes from a named JSON object.
# Not part of the authoring surface — the runner does this decode for you at runtime.
serde_json = "1"
