[package]
name = "example-custom-base"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: selecting the RUN base image + installing the Rust toolchain through the EXPOSED config knobs (RemoteConfig.base_image / .install_rust, or the MODAL_RUST_BASE_IMAGE / MODAL_RUST_INSTALL_RUST env vars). Point the run image at a CUDA-devel base that ships NO Rust, ask the facade to rustup-install a toolchain into it, and prove OFFLINE (dry_run) that the rendered image dockerfile starts `FROM nvidia/cuda:...` and carries the rustup install RUN — no new feature, only exposed knobs."
publish = false

[lib]
name = "example_custom_base"
path = "src/lib.rs"

[[bin]]
# The offline driver: builds a RemoteConfig pointed at a CUDA-devel base with
# install_rust set, then dry_runs and prints the rendered image dockerfile lines.
# Pure projection — no Modal, no credentials, no network.
name = "custom_base"
path = "src/bin/custom_base.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
