[package]
name = "example-custom-types"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: a #[modal_rust::function] takes and returns YOUR OWN structs — the macro infers the wire I/O straight from the signature (`fn score(p: Player) -> anyhow::Result<Scored>`)."
publish = false

[lib]
name = "example_custom_types"
path = "src/lib.rs"

[[bin]]
name = "modal_runner"
path = "src/bin/modal_runner.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
