[package]
name = "example-deploy-and-call"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: the production model — the run-vs-deploy build boundary. `deploy` runs `cargo build --release` ONCE at image-build time and bakes the binary into the image (client-mount-only FunctionCreate, persistent publish); a later `call` resolves the published function by name and invokes the prebuilt /app/modal_runner with NO rebuild — versus `.remote()`, which builds in the function body on every cold container. Proven OFFLINE: a mock-backed test asserts the deploy manifest and that call resolves the function."
publish = false

[lib]
name = "example_deploy_and_call"
path = "src/lib.rs"

[[bin]]
# The offline driver: projects BOTH the RUN and DEPLOY manifests (no Modal, no
# network) and prints where each one builds the binary. Pure projection.
name = "deploy_and_call"
path = "src/bin/deploy_and_call.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# Activates the facade's `testkit` seam (`App::connect_at`) so the offline test can
# drive a REAL deploy + call against the in-process mock. NOT part of the example's
# authoring surface — it is used only by `tests/manifest.rs`.
modal-rust = { path = "../../crates/modal-rust", features = ["testkit"] }
# The in-process gRPC mock backend the deploy/call round-trip dials (loopback only).
modal-rust-testkit = { path = "../../crates/modal-rust-testkit" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
