[package]
name = "example-error-handling"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: how a #[modal_rust::function] failure crosses the boundary — a plain anyhow error (opaque, details: null) vs a structured Serialize error (machine-readable details the caller branches on). Same frozen `function_error` kind, different `details`."
publish = false

[lib]
name = "example_error_handling"
path = "src/lib.rs"

[[bin]]
# The driver tour: runs both failing functions OFFLINE through `.local()`, prints the
# wire envelope each produces, and branches on the structured `details`. No Modal.
name = "error_handling"
path = "src/bin/error_handling.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
# The caller deserializes the envelope's machine-readable `details` (a
# `serde_json::Value`) back into the typed error to branch on it.
serde_json = "1"
