[package]
name = "example-fan-out-map"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: embarrassingly-parallel scale-out with .map() — one #[modal_rust::function] mapped over N independent inputs, returning Vec<Out> in input order through the typed app.analyze(..) method the macro generates."
publish = false

[lib]
name = "example_fan_out_map"
path = "src/lib.rs"

[[bin]]
# The RUN/DEPLOY runner — its whole body is one line: `modal_rust::modal_runner!(..)`.
name = "modal_runner"
path = "src/bin/modal_runner.rs"

[[bin]]
# The driver tour: the offline local fan-out runs in `cargo run`; the live
# `.map([..])` fan-out across containers compiles always, runs only with credentials.
name = "fan_out_map"
path = "src/bin/fan_out_map.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
# `.map([..])` is async; the driver drives it with a tokio runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
