[package]
name = "example-queue-pipeline"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: a producer/consumer pipeline through a named modal.Queue — the producer put_many's jobs (numbers) into Queue::from_name(\"queue-pipeline-jobs\"); a #[modal_rust::function] consumer drains it with blocking get(timeout) and computes each job's Collatz stopping time. FIFO plain data (u64 jobs) interops with Python; the offline test proves the produce→drain round-trip against the in-process mock."
publish = false

[lib]
name = "example_queue_pipeline"
path = "src/lib.rs"

[[bin]]
# The driver tour: the offline per-job computation runs in `cargo run`; the live
# produce + remote drain pipeline compiles always, runs only with credentials.
name = "queue_pipeline"
path = "src/bin/queue_pipeline.rs"

[[bin]]
# The standalone producer: `put_many`s the batch into the named Queue and exits,
# leaving it populated so `modal-rust run drain_jobs` can drain it separately.
# Live-only (Queue handles open a gRPC client); needs Modal credentials.
name = "produce"
path = "src/bin/produce.rs"

[dependencies]
# Queue handles ARE orchestration (they open a gRPC client), so unlike the pure
# decorator examples this lib needs the `client` feature in [dependencies] — the
# same place `examples/orchestrate` puts it.
modal-rust = { path = "../../crates/modal-rust", features = ["client"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
# `Queue` methods are async; the handler body (a sync fn by contract) drives them
# with its own runtime, and the driver binary uses #[tokio::main].
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# Activates the facade's `testkit` seam (`Queue::from_name_at`) so the offline test
# can do a REAL produce→drain round-trip against the in-process mock. NOT part of
# the example's authoring surface — it is used only by `tests/mock_queue.rs`.
modal-rust = { path = "../../crates/modal-rust", features = ["testkit"] }
# The in-process gRPC mock backend with the stateful Queue store (loopback only).
modal-rust-testkit = { path = "../../crates/modal-rust-testkit" }
