[package]
name = "quickstart"
version = "0.0.0"
edition = "2021"
description = "The README quickstart, as a real compiled+tested crate: the cleanest newcomer surface — a single `modal-rust` dep and a 3-line #[function]. No runner bin, no __private, no env var. The modal-rust CLI generates the runner automatically."
publish = false

[lib]
name = "quickstart"
path = "src/lib.rs"

[dependencies]
# The ONE modal dependency. The `#[modal_rust::function]` macro routes its generated
# code through this facade (the serde_derive pattern), so there is no
# `modal-rust-runtime` / `inventory` to add, and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
