[package]
name = "example-scheduled-job"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: a DEPLOYED function that runs on a cron schedule with NO caller (`#[modal_rust::function(schedule = Cron(\"0 9 * * 1\"))]`). The decorator IS the config — the facade canonicalizes the `Cron`/`Period` form to a spec the SDK parses into Modal's `Schedule` (a Cron/Period oneof) and rides it onto the deploy FunctionCreate manifest's `schedule` (field 72), so Modal invokes the function automatically on that cadence."
publish = false

[lib]
name = "example_scheduled_job"
path = "src/lib.rs"

[[bin]]
# The RUN/DEPLOY runner — its whole body is one line: `modal_rust::modal_runner!(..)`.
name = "modal_runner"
path = "src/bin/modal_runner.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
