[package]
name = "example-secrets"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: attach a named Modal secret on the decorator (`#[modal_rust::function(secrets = [\"my-api-key\"])]`) and read it inside the function as an env var (`std::env::var(\"MY_API_KEY\")`). The decorator IS the config — the facade resolves the named secret and rides its id into the FunctionCreate manifest."
publish = false

[lib]
name = "example_secrets"
path = "src/lib.rs"

[[bin]]
# The RUN/DEPLOY runner — its whole body is one line: `modal_rust::modal_runner!(..)`.
name = "modal_runner"
path = "src/bin/modal_runner.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
