[package]
name = "example-secrets"
version = "0.0.0"
edition = "2021"
description = "Teaches ONE concept: attach a named Modal secret on the decorator (`#[modal_rust::function(secrets = [\"my-api-key\"])]`) and read it inside the function as an env var (`std::env::var(\"MY_API_KEY\")`). The decorator IS the config — the facade resolves the named secret and rides its id into the FunctionCreate manifest."
publish = false

[lib]
name = "example_secrets"
path = "src/lib.rs"

[dependencies]
# SINGLE modal dependency — exactly what a fresh external user writes. The
# `#[modal_rust::function]` macro routes its generated code through this facade, so
# there is no `modal-rust-runtime` / `inventory` to add and no rename.
modal-rust = { path = "../../crates/modal-rust" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# The example LIB is a pure `#[modal_rust::function]` library and stays LIGHT (no gRPC
# client) so the in-container `--bin modal_runner` build is tonic-free. Only the
# OFFLINE manifest test (`tests/manifest.rs`) needs the dump (`dry_run` +
# RemoteConfig/PlannedRequest), which lives behind the facade `client` feature — so we
# enable it on a SECOND, dev-only dependency edge. Cargo unifies a crate's own deps +
# dev-deps only when BUILDING TESTS, so the standalone lib build (and the remote runner
# build) stays light while the test target gets `client`.
modal-rust = { path = "../../crates/modal-rust", features = ["client"] }
